--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ chrome-profiler-events*.json
 .history/*
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
@@ -43,7 +44,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
-.eslintcache
-
-dist_sb
